# bermuda

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  channel.toml  pyproject.toml
.github/: OUTDATED_RUST_TEMPLATE.md  dependabot.yml
.github/workflows/: _build_dist.yml  actionlint.yml  check_rust_version.yml  publish_pypi.yml  wheels.yml  zizmor.yml
crates/bermuda/: Cargo.toml  build.rs
crates/bermuda/src/: lib.rs
crates/bermuda/tests/: intersection.rs  test_face_triangulation.rs  test_intersection.rs  test_monotone_polygon.rs  test_point.rs
crates/triangulation/: Cargo.toml
crates/triangulation/src/: face_triangulation.rs  intersection.rs  lib.rs  monotone_polygon.rs  path_triangulation.rs  point.rs
python/bermuda/: _bermuda.pyi
tests/: test_triangulate.py
tests/data/: napari_bermuda_triang_mzpllk60.npz
