[workspace]
members = ["crates/*"]
resolver = "2"


[workspace.package]
version = "0.1.0"
license = "BSD-3"
homepage = "https://github.com/napari/bermuda"
repository = "https://github.com/napari/bermuda.git"

[workspace.dependencies]
triangulation = { path = "crates/triangulation" }
pyo3 = { version = "0.28.1", features = ["extension-module"] }
numpy = "0.28.0"
rstest = "0.26.1"


[workspace.lints.rust]
unsafe_code = "warn"